# prado10

./: .gitignore  B6_DIAGNOSTIC_REPORT.md  B6_ML_ACTIVATION_COMPLETE.md  B6_ML_FUSION_SWEEP_COMPLETE.md  B6_ML_V2_COMPLETE.md  B6_ML_V2_DIAGNOSTIC_COMPLETE.md  BUILDER_CR2_COMPLETE.md  BUILDER_FINAL_COMPLETE.md  CHANGELOG.md  DASHBOARD_COMPLETE.md  MINI_SWEEP_I1A_COMPLETE.md  MINI_SWEEP_I1B_I1C_COMPLETE.md  MINI_SWEEP_I1D_COMPLETE.md  MINI_SWEEP_I1E_COMPLETE.md  MINI_SWEEP_I1F_COMPLETE.md  MINI_SWEEP_I1G_COMPLETE.md  MINI_SWEEP_I1H_COMPLETE.md  MINI_SWEEP_PATCH3_COMPLETE.md  ML_ACTIVATION_STATUS.md  ML_Allocator_Diagnostic_QQQ_20251122_000249.md  ML_FUSION_SWEEP_REPORT.md  ML_V2_COMPLETE_SYSTEM.md  ML_V2_DIAGNOSTIC_GUIDE.md  ML_V2_DIAGNOSTIC_REPORT_QQQ.md  ML_V2_FINAL_VERIFICATION.md  ML_V2_IMPLEMENTATION_COMPLETE.md  ML_V2_QUICK_REFERENCE.md  MODULE_A_SUMMARY.md  MODULE_B_SUMMARY.md  MODULE_CR2_SUMMARY.md  MODULE_C_SUMMARY.md  MODULE_D_SUMMARY.md  MODULE_E_SUMMARY.md  MODULE_F_SUMMARY.md  MODULE_G_SUMMARY.md  MODULE_H_SUMMARY.md  MODULE_J_COMPLETE.md  MODULE_J_SUMMARY.md  MODULE_MC2_SUMMARY.md  MODULE_Y_SUMMARY.md  (+41 more)
src/afml_system/adaptive/: __init__.py  adaptive_training.py
src/afml_system/autotune/: __init__.py  auto_tuner.py
src/afml_system/backtest/: __init__.py  backtest_engine.py  combined_backtest.py  crisis_stress.py  crisis_stress_cr2.py  monte_carlo.py  monte_carlo_mc2.py  reporting.py  walk_forward.py
src/afml_system/core/: cli.py  (+4 more)
tests/: __init__.py  test_adaptive_confidence.py  test_adaptive_training.py  test_atr_volatility_targeting.py  test_breakout_strategies.py  test_cr2_validation.py  test_forward_vol.py  test_full_pipeline.py  test_mc2_robustness.py  test_position_scaler.py  test_regime_selector.py  test_regime_selector_manual.py  test_sweep_y1_risk_scaling.py  test_volatility_strategies.py
(+48 files in other folders)
